--- a/app/src/main/res/layout/simple_white_list_1.xml
+++ b/app/src/main/res/layout/simple_white_list_1.xml
@@ -22,5 +22,5 @@
     android:gravity="center_vertical"
     android:paddingStart="?android:attr/listPreferredItemPaddingStart"
     android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
-    android:textColor="@color/abc_primary_text_material_dark"
+    android:textColor="@android:color/holo_blue_dark"
     android:minHeight="?android:attr/listPreferredItemHeightSmall" />
